# OOOP_1_term

./: README.md
lab_0/: CMakeLists.txt  README.md  main.cpp
lab_0/module1/: module1.cpp  module1.h
lab_0/module2/: module2.h
lab_0/module3/: module3.cpp  module3.h
lab_1/: CMakeLists.txt  bigint.cpp  bigint.h  bigint_unittest.cpp
lab_2/: CMakeLists.txt  cmdparser.cpp  cmdparser.h  exceptions.h  factory.cpp  factory.h  gamemode.h  main.cpp  simulator.cpp  simulator.h  strategy.h  types.h
lab_2/gamemodes/: competitionnodetails.cpp  competitionnodetails.h  competitionwithdetails.cpp  competitionwithdetails.h  tournament.cpp  tournament.h
lab_2/strategies/complex/: defectifanydefect.cpp  defectifanydefect.h  mostusedaction.cpp  mostusedaction.h  mostusedactionwithforgiveness.cpp  mostusedactionwithforgiveness.h
lab_2/strategies/simple/: alwaysalternateaction.cpp  alwaysalternateaction.h  alwayscooperate.cpp  alwayscooperate.h  alwaysdefect.cpp  alwaysdefect.h  randomaction.cpp  randomaction.h
lab_4/: CMakeLists.txt  main.cpp  parser.h  printtuple.h
